[package]
name = "bevy_ratatui_render"
description = "A bevy plugin for rendering your bevy app to the terminal using ratatui."
version = "0.4.2"
edition = "2021"
authors = ["cxreiff <cooper@cxreiff.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/cxreiff/bevy_ratatui_render"
documentation = "https://docs.rs/bevy_ratatui_render"
categories = ["game-engines", "gui", "rendering", "command-line-interface"]
keywords = ["bevy", "ratatui", "terminal", "tui", "render"]

[dependencies]
bevy = { version = "0.14", features = ["dynamic_linking"] }
crossterm = "0.27.0"
crossbeam-channel = "0.5.13"
ratatui = "=0.27.0"
ratatui-image = "1.0.2"
bevy_ratatui = "0.5.3"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
