[package]
name = "bevy_ratatui_render"
description = "A bevy plugin for rendering your bevy app to the terminal using ratatui."
version = "0.5.8"
edition = "2021"
authors = ["cxreiff <cooper@cxreiff.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/cxreiff/bevy_ratatui_render"
documentation = "https://docs.rs/bevy_ratatui_render"
categories = ["game-engines", "gui", "rendering", "command-line-interface"]
keywords = ["bevy", "ratatui", "terminal", "tui", "render"]

[dependencies]
bevy = "0.14.2"
crossterm = "0.28.0"
crossbeam-channel = "0.5.13"
ratatui = "0.29.0"
ratatui-image = "3.0.0"
bevy_ratatui = "0.6.4"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
